Projeto/Compilador/tests/cases/error/T32.pas
program T32;
var v: array[1..2] of integer;
begin
  readln(v);
end.
